--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+== elt
+This application was created for Tokyu.rb.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+You can choose and vote the LT, food, sake you like the best! :beer: :computer: :meat_with_bone:
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+It will be available on November 29th, at TokyuRubyKaigi08.
